@@ -1,3 +1,8 @@
+2008-10-10  Akira TAGOH  <tagoh@redhat.com>
+
+	* src/im-chooser-simple.c (im_chooser_simple_get_widget): code cleanup
+	and change the option order.
+
 2008-09-15  Akira TAGOH  <tagoh@redhat.com>
 
 	* src/im-chooser-simple.c (im_chooser_simple_show_status_icon_on_toggled): 
